Make it compilable & add -O3 to all projects

--- a/libuvccamera/build.gradle
+++ b/libuvccamera/build.gradle
@@ -25,6 +25,8 @@ apply plugin: 'com.android.library'
 import org.apache.tools.ant.taskdefs.condition.Os
 
 android {
+	namespace 'com.serenegiant.uvccamera'
+
 	compileSdkVersion versionCompiler
 	buildToolsVersion versionBuildTool
 
@@ -33,17 +35,17 @@ android {
 		targetCompatibility javaTargetCompatibility
 	}
 
-    defaultConfig {
-        minSdkVersion 14
+	defaultConfig {
+		minSdkVersion 24
 		targetSdkVersion versionTarget
-    }
+	}
 
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-        }
-    }
+	buildTypes {
+		release {
+			minifyEnabled false
+			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+		}
+	}
 	sourceSets {
 		main {
 			jniLibs.srcDir 'src/main/libs'
@@ -84,7 +86,7 @@ task ndkClean(type: Exec, description: 'clean JNI libraries') {
 clean.dependsOn 'ndkClean'
 
 dependencies {
-    implementation fileTree(dir: new File(buildDir, 'libs'), include: '*.jar')
+	implementation fileTree(dir: new File(buildDir, 'libs'), include: '*.jar')
 
 	implementation "com.android.support:support-v4:${supportLibVersion}"
 	implementation "com.android.support:support-annotations:${supportLibVersion}"
